--- a/src/pages/chat/chat-room/chat-room.scss
+++ b/src/pages/chat/chat-room/chat-room.scss
@@ -18,16 +18,16 @@
   font-size: 0.9rem;
 }
 
-.messages-box {
-  height: 270px;
-  overflow-y: scroll;
-}
+// .messages-box {
+//   height: 270px;
+//   overflow-y: scroll;
+// }
 
-.chat-box {
-  height: 100vh;
-  // margin-bottom: -50px;
-  overflow-y: scroll;
-}
+// .chat-box {
+//   // height: 100vh;
+//   // margin-bottom: -50px;
+//   overflow-y: scroll;
+// }
 
 .rounded-lg {
   border-radius: 0.5rem;
