--- a/src/common/components/header/header.html
+++ b/src/common/components/header/header.html
@@ -1,6 +1,6 @@
 <header>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" >
         <a class="navbar-brand" style="color: #fff;" >Chat WEB Testing</a>
         
         <div class="collapse navbar-collapse" id="navbarCollapse">
