--- a/src/common/components/chat-box/chat-box.scss
+++ b/src/common/components/chat-box/chat-box.scss
@@ -31,3 +31,21 @@
 .break-line {
   word-break: break-all;
 }
+.header-typing {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: rotate(180deg);
+  text-align: center;
+  width: 100%;
+  display: table;
+  height: 50px;
+  z-index: 1;
+}
+
+.typing-badge {
+  padding: 10px 20px !important;
+  margin-top: 20px;
+  vertical-align: middle;
+  background-color: #4b6b8e !important;
+}
