--- a/src/common/components/message-box/message-box.scss
+++ b/src/common/components/message-box/message-box.scss
@@ -8,8 +8,12 @@
   border-radius: 0.5rem;
 }
 
-.message{
+.message-text {
   transform: rotate(180deg);
+}
+
+.sender {
+  background-color: #ecebe7 !important;
 }
 
 input::placeholder {
